<resources>
    <string name="app_name">WeatherApp</string>


    <string name="location_permission_title">Location Permission</string>
    <string name="location_permission_message">The app will now request access to your location so that we can get the weather information for your location.</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_setting">SettingActivity</string>

    <string name="setting_button">Settings</string>
    <string name="temperature_measurement">Temperature measurement:</string>
    <string name="celsius_btn">Celsius</string>
    <string name="fahrenheit_btn">Fahrenheit</string>
    <string name="days_to_display">Days to display:</string>
    <string name="zip_code">Locate by a zip code:</string>
    <string name="cancel_btn">Cancel</string>
    <string name="submit_btn">Submit</string>
    <string name="btn_detect_location">Locate</string>
    <string name="user_zip_checkbox">Use zip code</string>
    <string-array name="disp_days">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>
