<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/temperature_measurement"
        android:id="@+id/tempMeasureTextView"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <RadioGroup
        android:id="@+id/btn_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="30dp"
        android:layout_below="@id/tempMeasureTextView">
        <RadioButton
            android:id="@+id/celsius_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/celsius_btn"/>
        <RadioButton
            android:id="@+id/fahrenheit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fahrenheit_btn"/>
    </RadioGroup>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/days_to_display"
        android:id="@+id/daysToDisplayTextView"
        android:layout_below="@+id/btn_group"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:hint="(1 through 10)"
        android:id="@+id/daysToDispEditText"
        android:layout_below="@+id/daysToDisplayTextView"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/zip_code"
        android:id="@+id/zipCodeTextView"
        android:layout_below="@+id/daysToDispEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/zipCodeEditText"
        android:layout_below="@+id/zipCodeTextView"
        android:layout_centerHorizontal="true"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_btn"
        android:id="@+id/btn_submit"
        android:layout_below="@+id/zipCodeEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel_btn"
        android:id="@+id/btn_cancel"
        android:layout_below="@+id/btn_submit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>




</RelativeLayout>



